--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-sharp": "^1.6.46",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-remark": "^1.7.44",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.10"
   },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
@@ -33,6 +33,7 @@
     "dev": "gatsby develop",
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "setup": "npm install --no-save contentful-import yargs-parser axios chalk && node ./setup.js"
   }
 }
